tests/fail.m31.ref
Successfully failed command with runtime error:
File "./fail.m31", line 1, characters 6-9:
Application of the non-function:
   ⊢ Type : Type



File "./fail.m31", line 3, characters 1-9:
expected to fail but computed
⊢ Type : Type
